[gd_scene load_steps=37 format=3 uid="uid://dqy4a7s65fac4"]

[ext_resource type="Texture2D" uid="uid://bxoatbwyhswvw" path="res://icon.svg" id="1_ljh6r"]
[ext_resource type="Script" path="res://delivery_game.gd" id="1_p7wcd"]
[ext_resource type="Script" path="res://Player.gd" id="1_we85r"]
[ext_resource type="Texture2D" uid="uid://cdve1quqfkgb7" path="res://medievalStructure_18.png" id="2_idexx"]
[ext_resource type="Texture2D" uid="uid://biq4ab7nilybi" path="res://medievalStructure_17.png" id="3_dkurm"]
[ext_resource type="Texture2D" uid="uid://bwjcxtd10ehjp" path="res://medievalStructure_20.png" id="3_y43p2"]
[ext_resource type="Texture2D" uid="uid://dohcy3q542bk1" path="res://medievalStructure_21.png" id="4_mxxgi"]
[ext_resource type="Script" path="res://CollisionDetection.gd" id="5_mprya"]
[ext_resource type="Script" path="res://GPUParticles2D.gd" id="7_1bimb"]
[ext_resource type="Texture2D" uid="uid://cwbhhevy8lreb" path="res://genericItem_color_078.png" id="8_jl7dg"]
[ext_resource type="Script" path="res://Score.gd" id="8_pibvq"]
[ext_resource type="Script" path="res://PauseMenu.gd" id="9_5quk1"]
[ext_resource type="Script" path="res://Package1.gd" id="9_buxc1"]
[ext_resource type="Script" path="res://RpButton.gd" id="9_ks1ex"]
[ext_resource type="Texture2D" uid="uid://dpyt1f8nkp1es" path="res://genericItem_color_035.png" id="10_ivnkf"]
[ext_resource type="Script" path="res://MMButton.gd" id="10_uax2q"]
[ext_resource type="Script" path="res://Package2.gd" id="11_6fcde"]
[ext_resource type="Script" path="res://ConButton.gd" id="12_0y8o1"]
[ext_resource type="AudioStream" uid="uid://ckago5mna10y" path="res://item-pick-up-38258.mp3" id="12_7va55"]
[ext_resource type="Texture2D" uid="uid://bnkl2j6vglfes" path="res://genericItem_color_082.png" id="12_upti4"]
[ext_resource type="Script" path="res://Package3.gd" id="13_32i2e"]
[ext_resource type="AudioStream" uid="uid://cofo3rxhbmugc" path="res://coin-47904-2.mp3" id="13_m68bm"]
[ext_resource type="Texture2D" uid="uid://br0ulpysgutcb" path="res://genericItem_color_142.png" id="14_h7qfh"]
[ext_resource type="Script" path="res://Package4.gd" id="15_43chq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1g7r"]
size = Vector2(2915, 1074)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_haidj"]
size = Vector2(44, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_275ge"]
size = Vector2(44, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hoc3"]
size = Vector2(52, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_755q3"]
size = Vector2(60, 60)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8mpvq"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
scale_min = 0.34
scale_max = 0.34
color = Color(1, 1, 1, 0.25098)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yaq2g"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nsne"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kojpm"]
size = Vector2(158.595, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2mfi"]
size = Vector2(102.941, 117.46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxuyl"]
size = Vector2(94.1176, 57.3248)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acc0p"]
size = Vector2(105, 200)

[node name="DeliveryGame" type="Node2D"]
script = ExtResource("1_p7wcd")

[node name="Background" type="ColorRect" parent="."]
offset_left = -956.0
offset_top = -369.0
offset_right = 1954.0
offset_bottom = 711.0
color = Color(0.541176, 0.796078, 0.984314, 1)

[node name="Ground" type="ColorRect" parent="."]
offset_left = -956.0
offset_top = 122.0
offset_right = 1957.0
offset_bottom = 1202.0
color = Color(0.619608, 0.34902, 0.105882, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="Ground"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D"]
position = Vector2(1454.5, 546)
shape = SubResource("RectangleShape2D_b1g7r")

[node name="Recipient1" type="Sprite2D" parent="."]
position = Vector2(300, 35)
scale = Vector2(3, 3)
texture = ExtResource("3_dkurm")

[node name="Area2D" type="Area2D" parent="Recipient1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Recipient1/Area2D"]
shape = SubResource("RectangleShape2D_haidj")

[node name="Recipient2" type="Sprite2D" parent="."]
position = Vector2(612, 55)
scale = Vector2(3, 3)
texture = ExtResource("2_idexx")

[node name="Area2D" type="Area2D" parent="Recipient2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Recipient2/Area2D"]
shape = SubResource("RectangleShape2D_275ge")

[node name="Recipient3" type="Sprite2D" parent="."]
position = Vector2(880, 55)
scale = Vector2(3, 3)
texture = ExtResource("3_y43p2")

[node name="Area2D" type="Area2D" parent="Recipient3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Recipient3/Area2D"]
shape = SubResource("RectangleShape2D_1hoc3")

[node name="Recipient4" type="Sprite2D" parent="."]
position = Vector2(1200, 35)
scale = Vector2(3, 3)
texture = ExtResource("4_mxxgi")

[node name="Area2D" type="Area2D" parent="Recipient4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Recipient4/Area2D"]
shape = SubResource("RectangleShape2D_755q3")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 3
process_material = SubResource("ParticleProcessMaterial_8mpvq")
texture = ExtResource("1_ljh6r")
lifetime = 0.15
script = ExtResource("7_1bimb")

[node name="RB2DPlayer" type="RigidBody2D" parent="."]
position = Vector2(-188, 92)
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_we85r")

[node name="Sprite2D" type="Sprite2D" parent="RB2DPlayer"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ljh6r")

[node name="Camera2D" type="Camera2D" parent="RB2DPlayer/Sprite2D"]

[node name="Score" type="Label" parent="RB2DPlayer/Sprite2D/Camera2D"]
offset_left = 498.0
offset_top = -520.0
offset_right = 632.0
offset_bottom = -451.0
theme_override_colors/font_color = Color(0.188235, 0.137255, 0.121569, 1)
theme_override_font_sizes/font_size = 50
text = "Score = "
script = ExtResource("8_pibvq")

[node name="BGPauseMenu" type="ColorRect" parent="RB2DPlayer/Sprite2D/Camera2D"]
process_mode = 2
visible = false
offset_left = -806.0
offset_top = -520.0
offset_right = 468.0
offset_bottom = 112.0
color = Color(0.0823529, 0.313726, 0.368627, 1)
script = ExtResource("9_5quk1")

[node name="RpButton" type="Button" parent="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = 22.0
offset_right = 121.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Replay"
script = ExtResource("9_ks1ex")

[node name="MMButton" type="Button" parent="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = 110.0
offset_right = 121.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Main Menu"
script = ExtResource("10_uax2q")

[node name="ConButton" type="Button" parent="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -66.0
offset_right = 121.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Continue"
script = ExtResource("12_0y8o1")

[node name="Label" type="Label" parent="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -190.0
offset_right = 65.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.909804, 0.796078, 0.2, 1)
theme_override_font_sizes/font_size = 50
text = "Paused"

[node name="BGGameOver" type="ColorRect" parent="RB2DPlayer/Sprite2D/Camera2D"]
process_mode = 2
visible = false
offset_left = -806.0
offset_top = -520.0
offset_right = 468.0
offset_bottom = 112.0
color = Color(0.0823529, 0.313726, 0.368627, 1)

[node name="RpButton" type="Button" parent="RB2DPlayer/Sprite2D/Camera2D/BGGameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = 22.0
offset_right = 121.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Replay"
script = ExtResource("9_ks1ex")

[node name="MMButton" type="Button" parent="RB2DPlayer/Sprite2D/Camera2D/BGGameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = 110.0
offset_right = 121.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Main Menu"
script = ExtResource("10_uax2q")

[node name="Label" type="Label" parent="RB2DPlayer/Sprite2D/Camera2D/BGGameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -190.0
offset_right = 65.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.909804, 0.796078, 0.2, 1)
theme_override_font_sizes/font_size = 50
text = "Game Over"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RB2DPlayer"]
shape = SubResource("RectangleShape2D_yaq2g")

[node name="Area2D" type="Area2D" parent="RB2DPlayer"]
script = ExtResource("5_mprya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RB2DPlayer/Area2D"]
shape = SubResource("RectangleShape2D_4nsne")

[node name="PickUp" type="AudioStreamPlayer2D" parent="RB2DPlayer"]
stream = ExtResource("12_7va55")

[node name="Deliver" type="AudioStreamPlayer2D" parent="RB2DPlayer"]
stream = ExtResource("13_m68bm")

[node name="Package1" type="Sprite2D" parent="."]
position = Vector2(-730, 82)
scale = Vector2(0.340491, 0.315217)
texture = ExtResource("8_jl7dg")

[node name="Area2D" type="Area2D" parent="Package1"]
script = ExtResource("9_buxc1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Package1/Area2D"]
position = Vector2(0, 1.58621)
shape = SubResource("RectangleShape2D_kojpm")

[node name="Package2" type="Sprite2D" parent="."]
position = Vector2(-642, 83)
scale = Vector2(0.34, 0.315)
texture = ExtResource("10_ivnkf")

[node name="Area2D" type="Area2D" parent="Package2"]
script = ExtResource("11_6fcde")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Package2/Area2D"]
position = Vector2(-1.47058, 1.58728)
scale = Vector2(0.999999, 1)
shape = SubResource("RectangleShape2D_a2mfi")

[node name="Package3" type="Sprite2D" parent="."]
position = Vector2(-572, 90)
scale = Vector2(0.34, 0.314)
texture = ExtResource("12_upti4")

[node name="Area2D" type="Area2D" parent="Package3"]
script = ExtResource("13_32i2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Package3/Area2D"]
position = Vector2(-0.00012207, 0)
shape = SubResource("RectangleShape2D_jxuyl")

[node name="Package4" type="Sprite2D" parent="."]
position = Vector2(-499, 71)
scale = Vector2(0.34, 0.314)
texture = ExtResource("14_h7qfh")

[node name="Area2D" type="Area2D" parent="Package4"]
script = ExtResource("15_43chq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Package4/Area2D"]
position = Vector2(-0.5, -2)
shape = SubResource("RectangleShape2D_acc0p")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[connection signal="pressed" from="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu/RpButton" to="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu/RpButton" method="_on_pressed"]
[connection signal="pressed" from="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu/MMButton" to="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu/MMButton" method="_on_pressed"]
[connection signal="pressed" from="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu/ConButton" to="RB2DPlayer/Sprite2D/Camera2D/BGPauseMenu/ConButton" method="_on_pressed"]
[connection signal="pressed" from="RB2DPlayer/Sprite2D/Camera2D/BGGameOver/RpButton" to="RB2DPlayer/Sprite2D/Camera2D/BGGameOver/RpButton" method="_on_pressed"]
[connection signal="pressed" from="RB2DPlayer/Sprite2D/Camera2D/BGGameOver/MMButton" to="RB2DPlayer/Sprite2D/Camera2D/BGGameOver/MMButton" method="_on_pressed"]
[connection signal="area_entered" from="Package1/Area2D" to="Package1/Area2D" method="_on_area_entered"]
[connection signal="area_entered" from="Package2/Area2D" to="Package2/Area2D" method="_on_area_entered"]
[connection signal="area_entered" from="Package3/Area2D" to="Package3/Area2D" method="_on_area_entered"]
[connection signal="area_entered" from="Package4/Area2D" to="Package4/Area2D" method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="RB2DPlayer" method="_on_timer_timeout"]
